--- a/app/components/ChallengeCarousel/challengeCarousel.css
+++ b/app/components/ChallengeCarousel/challengeCarousel.css
@@ -19,15 +19,12 @@
     
   }
 
-  .challenge-embla__slide {
-    transform: translate3d(0, 0, 0);
-    flex: 0 0 var(--slide-size);
-    min-width: 0;
-    margin-right: var(--slide-spacing);
-    position: relative; /* Ensure z-index works */
-    transition: z-index 0.3s, transform 0.3s; /* Smooth transition */
-    
-  }
+.challenge-embla__slide {
+  flex: 0 0 var(--slide-size); /* e.g. 70% */
+  min-width: 0;
+  padding-left: var(--slide-spacing); /* e.g. 2rem */
+}
+
 
   .challenge-embla__slide--center {
     position: relative;
