--- a/app/components/ChallengeCard/challengeCard.css
+++ b/app/components/ChallengeCard/challengeCard.css
@@ -27,7 +27,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  text-align: center;
+  text-align: left;
 
   color: #fff;
   text-shadow: 0 4px 12px rgba(0,0,0,.7);
